[project]
name = "vggt-omega"
version = "0.0.1"
description = "VGGT-Omega feed-forward camera and depth reconstruction."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Jianyuan Wang", email = "jianyuan@robots.ox.ac.uk"},
]
dependencies = [
    "numpy<2",
    "Pillow",
    "einops",
    "safetensors",
    "opencv-python",
    "requests>=2.34.2",
    "rerun-sdk>=0.20.0",
    "torch",
    "torchvision",
]

[project.optional-dependencies]
demo = [
    "onnxruntime",
]
export = [
    "pycolmap>=3.10.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["vggt_omega*"]
